Fixed a WP Components bug where live search was returning unpublished posts, fixed a WP Components bug with a mobile menu missing the z-index, fixed a bug where search page customizer default settings were not properly applied.

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -175,10 +175,7 @@
     .main-sidebar {
         width: 26%;
     }
-    @media screen and (max-width: 767px) {
-        .main-content, .main-content > .components-container { 
-            display: block;
-        }        
+    @media screen and (max-width: 767px) {     
         .content {
             width: 100%;
         }
